Keep unsaved documents open when switching areas

The document controller can find unsaved files by specifying the
"untitled" document name as long as the controller exists. Show the
document if it is found.

BUG: 486746
FIXED-IN: 5.15.240800